--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="action_search">Search</string>
     <string name="title_activity_favorites">FavoritesActivity</string>
     <string name="title_activity_favorites_fragment">FavoritesFragment</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
